unpackaged/main/default/objects/ERS_Impairment__c/ERS_Impairment__c.object-meta.xml
<CustomObject>
    <description>Describes an Impairment scenario found in the membership, when it is validated .  An impairment is a off-nominal condition in the membership, such that special attention is required.  Typically, when an impairment is present, there may be a payment required in order to provide service to the member.</description>
    <label>ERS Impairment</label>
    <nameField>
        <label>Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ERS Impairments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>