unpackaged/main/default/objects/ERS_Impairment__c/fields/Cancel_Service_Comment__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Service_Comment__c</fullName>
    <description>Feed comment when a service is cancelled</description>
    <inlineHelpText>Feed comment when a service is cancelled</inlineHelpText>
    <label>Cancel Service Comment</label>
    <type>TextArea</type>
</CustomField>