unpackaged/main/default/objects/ERS_Impairment__c/fields/COD_Comment__c.field-meta.xml
<CustomField>
    <fullName>COD_Comment__c</fullName>
    <description>Feed comment to be added to the case when ERS Advocate picks COD as Impairment Resolution action</description>
    <inlineHelpText>Feed comment to be added to the case when ERS Advocate picks COD as Impairment Resolution action</inlineHelpText>
    <label>COD Comment</label>
    <type>TextArea</type>
</CustomField>