unpackaged/main/default/objects/ERS_Impairment__c/fields/COD_Payment_Only__c.field-meta.xml
<CustomField>
    <fullName>COD_Payment_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the only payment option is COD for this impairment</description>
    <inlineHelpText>Check this option for an impairment if the only form of payment allowed is COD and do not select Reconcile or Information Only checkboxes if this is selected</inlineHelpText>
    <label>COD Payment Only</label>
    <type>Checkbox</type>
</CustomField>