unpackaged/main/default/objects/ERS_Impairment__c/fields/Information_Only__c.field-meta.xml
<CustomField>
    <fullName>Information_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When Selected this is served as Information Readout popup. Do not select COD ONLY or Reconcile checkboxes if this is selected</inlineHelpText>
    <label>Information Only</label>
    <type>Checkbox</type>
</CustomField>