unpackaged/main/default/objects/ERS_Impairment__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <description>Instructions to be displayed to the ERS Advocate, when validating a membership.  The instructions may describe the method of collecting the payment from the member if applicable</description>
    <inlineHelpText>Impairment found. Follow these instructions in order to create a Work Order for this call</inlineHelpText>
    <label>Instructions</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>