unpackaged/main/default/objects/ERS_Impairment__c/fields/Override_Comment__c.field-meta.xml
<CustomField>
    <fullName>Override_Comment__c</fullName>
    <label>Override Comment</label>
    <type>TextArea</type>
</CustomField>