unpackaged/main/default/objects/ERS_Impairment__c/fields/Payment_Collected_Comment__c.field-meta.xml
<CustomField>
    <fullName>Payment_Collected_Comment__c</fullName>
    <description>Feed comment to be added to the case, when the ERS Advocate collects a payment from the member to resolve the Impairment</description>
    <label>Payment Collected Comment</label>
    <type>TextArea</type>
</CustomField>