unpackaged/main/default/objects/ERS_Impairment__c/fields/Payment_Required__c.field-meta.xml
<CustomField>
    <fullName>Payment_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if a payment is required to get past this impairment or not</description>
    <inlineHelpText>A Payment is Required to create a Work Order for this impairment do not select Reconcile or Information Only checkboxes if this is selected</inlineHelpText>
    <label>Payment Required</label>
    <type>Checkbox</type>
</CustomField>