unpackaged/main/default/objects/ERS_Impairment__c/fields/Reconcile_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Reconcile_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When Selected this Entitlement will be moved to next contract period and do not select COD ONLY or Information Only checkboxes if this is selected</inlineHelpText>
    <label>Reconcile Entitlement</label>
    <type>Checkbox</type>
</CustomField>