unpackaged/main/default/objects/ERS_Impairment__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NAME</columns>
    <columns>COD_Payment_Only__c</columns>
    <columns>Payment_Required__c</columns>
    <columns>Information_Only__c</columns>
    <columns>Payment_Collected_Comment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>